version/3.0/ripscrip/1.2-math-and-coordinates.md
# 1.2 Math & Coordinates

[◀ Prev: 1.1 Protocol & Command Hierarchy](1.1-protocol-and-command-hierarchy.md) · [Contents](README.md) · [Next: 1.3 World View & Virtual Canvas ▶](1.3-world-view-virtual-canvas.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

The numeric foundations of RIPscrip 3.x: the base-36 [MegaNum](../../GLOSSARY.md) system carried forward from 1.54, the base-64 [UltraNum](../../GLOSSARY.md) system introduced by the 2.0 redesign, the global [Base Math](../../GLOSSARY.md) setting that selects between them, and the mathematics of the resolution-independent [world-coordinate](../../GLOSSARY.md) model.

[Number formats & base math](#numerical-parameters---formats-and-base-math-variations) · [Working by hand](#working-with-meganums-and-ultranums-by-hand) · [Choosing MegaNums vs UltraNums](#choosing-meganums-vs-ultranums) · [World coordinate systems](#world-coordinate-systems) · [The mathematics of graphics and coordinates](#the-mathematics-of-graphics-and-coordinates) · [RIP_SET_BASE_MATH](#rip_set_base_math) · [RIP_SET_COORDINATE_SIZE](#rip_set_coordinate_size) · [Limits snapshot](#limits-snapshot)

_In 1.54 there was no world-coordinate indirection and MegaNums were the only numbering - see [1.2 in the v1.54 reference](../../1.54/ripscrip/1.2-math-and-coordinates.md) for that simpler model; a 3.0 scene that never touches Base Math or the world frame behaves exactly like it (a 640×350 world frame, 2-digit MegaNum coordinates)._

## Numerical Parameters - Formats and Base-Math Variations

_Added in RIPscrip v2.A0._

_Evidence: 2.00a4; WP §3.2.1._

Throughout the RIPscrip specification, numeric parameters are used extensively to indicate where to draw things, how to draw things and various other pieces of information. For compactness, we do not use numbers that are normal decimal numbers (base-10). By default, RIPscrip uses base-36 numbers (Hexa-Tri-Decimal or more fondly, MegaNums) which use the digits 0-9 followed by A-Z. This was the original numbering system used in the 1.xx specification.

In the 2.xx specification, the base math can be altered to something other than base-36! With v2.xx, we are introducing a new numbering scheme that is base-64, otherwise known as Quadra-Hexa-Decimal, or more fondly known as UltraNums. UltraNums use the following digits:

`0-9  A-Z  a-z  #  &`

With this numbering scheme, you can squeeze larger numbers into an even smaller space than MegaNums! Here is a table showing how big of a number can be contained with X number of digits:

| Total Digits (X) | Decimal | Hexa-Decimal | MegaNums      | UltraNums      |
| ---------------- | ------- | ------------ | ------------- | -------------- |
| 1                | 9       | 15           | 35            | 63             |
| 2                | 99      | 255          | 1,295         | 4,095          |
| 3                | 999     | 4,095        | 46,655        | 262,143        |
| 4                | 9,999   | 65,535       | 1,679,615     | 16,777,215     |
| 5                | 99,999  | 1,048,575    | 60,466,175    | 1,073,741,823  |
| 6                | 999,999 | 16,777,215   | 2,176,782,335 | 68,719,476,735 |

The [RIP_SET_BASE_MATH](#rip_set_base_math) command (or the [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) flags) specifies the global base math used throughout the command sets. By altering the base math, you can make a single numeric parameter accept larger values without expanding the parameter in the specification. A couple of the RIPscrip commands utilize specific base math values (eg, UltraNums, etc) under certain circumstances. Any commands that are exceptions like this will be clearly documented as being exceptions to the rule.

> **NOTE:** 6 digit UltraNums cannot be easily represented under most personal computer compilers (beyond 32 bits). Therefore, UltraNums beyond 5 digits probably should not be used in a real world situation. _(v2.A3)_

The following is a basic table of Decimal, MegaNum and UltraNum values:

| Decimal | MegaNum | UltraNum | Decimal | MegaNum | UltraNum |
| ------- | ------- | -------- | ------- | ------- | -------- |
| 00      | 0       | 0        | 32      | 0W      | W        |
| 01      | 01      | 1        | 33      | 0X      | X        |
| 02      | 02      | 2        | 34      | 0Y      | Y        |
| 03      | 03      | 3        | 35      | 0Z      | Z        |
| 04      | 04      | 4        | 36      | 10      | a        |
| 05      | 05      | 5        | 37      | 11      | b        |
| 06      | 06      | 6        | 38      | 12      | c        |
| 07      | 07      | 7        | 39      | 13      | d        |
| 08      | 08      | 8        | 40      | 14      | e        |
| 09      | 09      | 9        | 41      | 15      | f        |
| 10      | 0A      | A        | 42      | 16      | g        |
| 11      | 0B      | B        | 43      | 17      | h        |
| 12      | 0C      | C        | 44      | 18      | i        |
| 13      | 0D      | D        | 45      | 19      | j        |
| 14      | 0E      | E        | 46      | 1A      | k        |
| 15      | 0F      | F        | 47      | 1B      | l        |
| 16      | 0G      | G        | 48      | 1C      | m        |
| 17      | 0H      | H        | 49      | 1D      | n        |
| 18      | 0I      | I        | 50      | 1E      | o        |
| 19      | 0J      | J        | 51      | 1F      | p        |
| 20      | 0K      | K        | 52      | 1G      | q        |
| 21      | 0L      | L        | 53      | 1H      | r        |
| 22      | 0M      | M        | 54      | 1I      | s        |
| 23      | 0N      | N        | 55      | 1J      | t        |
| 24      | 0O      | O        | 56      | 1K      | u        |
| 25      | 0P      | P        | 57      | 1L      | v        |
| 26      | 0Q      | Q        | 58      | 1M      | w        |
| 27      | 0R      | R        | 59      | 1N      | x        |
| 28      | 0S      | S        | 60      | 1O      | y        |
| 29      | 0T      | T        | 61      | 1P      | z        |
| 30      | 0U      | U        | 62      | 1Q      | #        |
| 31      | 0V      | V        | 63      | 1R      | &        |

The following C code fragment provides you with a way of converting decimal numbers to an UltraNum format:

```c
char ultra_num_table[64] = {
     '0', '1', '2', '3', '4', '5', '6', '7',
     '8', '9', 'A', 'B', 'C', 'D', 'E', 'F',
     'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N',
     'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V',
     'W', 'X', 'Y', 'Z', 'a', 'b', 'c', 'd',
     'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l',
     'm', 'n', 'o', 'p', 'q', 'r', 's', 't',
     'u', 'v', 'w', 'x', 'y', 'z', '#', '&'
};

char *Dec2Ultra(long value)
{
     static char buf[8];
     int    part, pos=0;

     setmem(buf, 0, 8);

     while (value >= 64L) {
          part       = value & 0x003Fl;
          value      = value >> 6;
          buf[pos++] = ultra_num_table[part];
     }

     if (value) {
          buf[pos++] = ultra_num_table[value];
     }

     strrev(buf);
     return(buf);
}
```

One wire-level quirk observed in the shipping driver: its MegaNum reader treats `-` as digit **0**, which is why stray `!|----` separator lines in TeleGrafix's own files parse harmlessly (see [1.1 Protocol & Command Hierarchy](1.1-protocol-and-command-hierarchy.md#wire-format-observations-from-the-corpus)). SyncTERM reproduces this exactly (`parse_mega`, ripper.c:9120-9121). _Evidence: corpus; SyncTERM._

## Working with MegaNums and UltraNums by hand

Both systems are plain positional numerals in RIPscrip's own digit alphabets - **not** the RFC 4648 "Base32"/"Base64" encodings, which share nothing with these beyond the number 64.

- **MegaNum digit alphabet (base 36):** `0`-`9` (values 0-9), then `A`-`Z` (values 10-35). Writers emit uppercase by convention.
- **UltraNum digit alphabet (base 64):** `0`-`9` (values 0-9), `A`-`Z` (values 10-35), `a`-`z` (values 36-61), `#` (value 62), `&` (value 63). Case is significant - `A` is 10 but `a` is 36.

**Calculating multi-character values:** most-significant digit first, each position worth a power of the base - value = d₀·bⁿ⁻¹ + d₁·bⁿ⁻² + … + dₙ₋₁ (b = 36 or 64). To _decode_: MegaNum `1M` is 1×36 + 22 = 58; MegaNum `HR` is 17×36 + 27 = 639; UltraNum `R9a` is 27×64² + 9×64 + 36 = 111,204. To _encode_ a decimal value, take `value ÷ b^k mod b` for each position, highest power first: decimal 250 as a 2-digit MegaNum is 250 ÷ 36 = 6 remainder 34 → `6Y`; the same 250 as a 2-digit UltraNum is 250 ÷ 64 = 3 remainder 58 → `3w`; decimal 360 (a full circle in degrees) is `A0` in MegaNums.

**Fixed widths and zero padding:** a `:2` width specifier means exactly two digits in the current base, zero-padded on the left (decimal 10 is `0A` as a 2-digit MegaNum, `0A` as a 2-digit UltraNum too). Numeric parameters have no delimiters between them - the fixed widths are what let the parser slice them apart, so a missing pad digit shifts every following parameter. `:XY` coordinate parameters are 2 digits by default, adjustable via [RIP_SET_COORDINATE_SIZE](#rip_set_coordinate_size); `:CM` color parameters follow the current color mode ([2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md#rip_set_color_mode)). Per-command field widths are collected in [9.0 Command Reference](9.0-command-reference.md).

**Last-parameter rules:** a variable-width numeric parameter may be used only as the last parameter of a command, and syntax rule 10 allows the last numeric parameter to be shortened by dropping leading zeros (`!|c01` → `!|c1`); a trailing reserved parameter may be omitted entirely ([1.1 Protocol & Command Hierarchy](1.1-protocol-and-command-hierarchy.md#ripscrip-protocol---syntax-and-general-structure)). A text string is likewise always last and never number-encoded.

**Base Math switching:** the global setting starts at base 36, is changed with [RIP_SET_BASE_MATH](#rip_set_base_math) or the [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) flags, and resets to base 36 on any [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows). Commands documented as exceptions ignore it - direct-RGB color values and drawing-palette RGB parameters are always UltraNums, and RIP_SET_BASE_MATH's own parameter is always a MegaNum.

Parser-side edge cases (early termination behavior, out-of-alphabet bytes, and the like) are implementer material - see the [MegaNum encoding techspec](../../1.54/techspecs/1.1-meganum-encoding.md) and the [2.0 stream conventions delta](../../2.0/techspecs/1.0-stream-conventions-delta.md).

## Choosing MegaNums vs UltraNums

_Evidence: 2.00a4; corpus; SyncTERM (ripper.c:9107-9131)._

Which base a command's parameters use is a **global mode**, not a per-command choice: after `!|J10` every base-math-governed field in every subsequent command reads as base-36; after `!|J1S`, base-64. Individual commands differ only in whether they _obey_ the mode - each command entry in this reference carries a base-math line, which is one of:

- **current setting** - the common case: coordinates, dimensions, radii, vertex counts, and most numeric fields.
- **MegaNums only** - commands that must parse before the mode is knowable or that reset it: [RIP_SET_BASE_MATH](#rip_set_base_math) itself (its `10`/`1S` argument is always base-36), and anything that follows a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) (a reset silently returns the mode to base 36 - re-send `J` immediately if the scene needs otherwise).
- **UltraNums only** - direct-RGB color values and drawing-palette RGB parameters (see [2.0 Color Modes & Palettes](2.0-color-modes-and-palettes.md)).
- **not numeric** - text parameters (always last in a command) ignore base math entirely.

### Worked encodings

A field's value is `first_digit × base + second_digit` (and so on for wider fields). Digit values: `0`-`9` = 0-9, `A`-`Z` = 10-35, then (UltraNums only) `a`-`z` = 36-61, `#` = 62, `&` = 63.

| Value | 2-digit MegaNum | 2-digit UltraNum |
| ----- | --------------- | ---------------- |
| 14    | `0E`            | `0E`             |
| 64    | `1S`            | `10`             |
| 960   | `QO` (26×36+24) | `F0` (15×64+0)   |
| 1280  | `ZK` (35×36+20) | `K0` (20×64+0)   |
| 1295  | `ZZ` (max)      | `KF`             |
| 4095  | - overflows     | `&&` (max)       |

So the ubiquitous corpus line `!|fZKQO` is a 1280×960 world frame in MegaNums - and note that TeleGrafix's chosen frame fits 2-digit MegaNums with 15 to spare (1295 max). A constructed UltraNum equivalent would be `!|J1S|fK0F0` _(constructed example - see the caution below)_.

### Decision guide

| Largest coordinate in either axis | Recommended encoding |
| --- | --- |
| ≤ 1,295 | 2-digit MegaNums (the default; what every TeleGrafix scene does) |
| 1,296 - 4,095 | 2-digit UltraNums (`J1S`) - same wire size, larger range - **or** 3-digit MegaNums via [RIP_SET_COORDINATE_SIZE](#rip_set_coordinate_size) |
| 4,096 - 46,655 | 3-digit MegaNums, or 3-digit UltraNums (max 262,143, capped by the 32,767 world limit) |
| larger | wider coordinate size; keep total field width ≤ 5 digits (32-bit arithmetic limit per 2.00a4) |

UltraNums earn one byte per coordinate over 3-digit MegaNums in the 1,296-4,095 band - meaningful at 2,400 baud when a scene is thousands of drawing operations.

### Interoperability caution

_Evidence: corpus; SyncTERM._

**No UltraNum usage has been observed in the wild.** All 116 TeleGrafix demo scripts run `J10` MegaNums, and SyncTERM cannot parse UltraNums at all - its number reader (`parse_mega`, ripper.c:9107-9131) treats `a`-`z` as _case-insensitive base-36 digits_, so a base-64 scene would silently mis-decode rather than fail. MegaNums are the only wire-proven encoding; treat UltraNums as documented-but-unexercised.

## World Coordinate Systems

_Added in RIPscrip v2.A0._

_Evidence: 2.00a4; WP §4.1; corpus._

Starting with the v2.0 specification of RIPscrip - carried unchanged into 3.x - the language is resolution independent through a "world coordinate system": you can alter the base coordinate system used to address the video's physical device coordinate system. Each coordinate system is called a "Coordinate Frame". There are two distinct levels of coordinate systems, from the lowest (least abstract) to the highest level (the drawing board):

1. **DEVICE COORDINATE FRAME** - the resolution of the actual display device. This is not determined as part of the RIPscrip language itself, it is actually determined by the terminal - based upon whatever type of video hardware is present (and what mode the user has chosen).

2. **[WORLD COORDINATE FRAME](1.3-world-view-virtual-canvas.md#rip_set_world_frame)** - This is the master coordinate system. This is the global set of coordinates, set by [RIP_SET_WORLD_FRAME](1.3-world-view-virtual-canvas.md#rip_set_world_frame) (wire opcode `f`). Ideally, it should be higher in dimensions than the Device Frame so that you do not lose resolution when "mapping" X/Y coordinates from the world coordinate system to the device coordinate system. If the dimensions of the World Frame are the same as the Device Frame then the mapping operation between World and Device Frames are identical and can be skipped entirely since an X/Y coordinate in the World Frame directly corresponds to a pixel location in the Device Frame.

Per the white paper, the world coordinate system may be defined up to a maximum of **32,767 × 32,767** - "plenty of room to accommodate video hardware over the next several decades." (The 2.00a4 draft had said 65535×65535 _(v2.A4)_; the shipping figure is the signed-16-bit bound.) Since versions of the RIPscrip specification prior to v2.0 were based on a 640x350 resolution without any World Frame, the World Frame defaults to 640 across and 350 high for backward compatibility; the `$COMPAT$` text variable restores that whole 1.54 environment (see [1.0 Introduction](1.0-introduction.md#differences-from-154)).

A real 3.x example, from the RIPtel demo prologue:

```text
!|fZKQO                 Set world coordinats to 1280x960
```

(comment and spelling TeleGrafix's own, ONLINE.RIP): `ZK` = 35×36+20 = **1280**, `QO` = 26×36+24 = **960**. The demos thus run in a 1280×960 world regardless of the user's actual screen mode. Alternate frames observed in the corpus: `HSDC` = 640×480, `HR9S` = 639×352, `HRDC` = 639×480. _Evidence: corpus._

## The Mathematics of Graphics and Coordinates

_Added in RIPscrip v2.A0._

_Evidence: 2.00a4 (the treatment carries into 3.x unchanged)._

Mathematics, unlike graphics, is abstract in nature. Graphics on the other hand, is very discrete in nature. A pixel in graphics is the smallest displayable element on a graphics screen (Picture Element). The corresponding concept in mathematics is a single point. A pixel has a discrete size and shape in graphics whereas in mathematics, a point is infinitely small and occupies no physical space in the cartesian coordinate system in which it exists.

In graphics we use the concept of coordinates and points to specify where a pixel is located. If graphics were like mathematics where a pixel was infinitely small, a graphics monitor wouldn't show anything other than black because a pixel would be infinitely small surrounded by blackness. But this is not the case. Graphics hardware has to have pixels defined as discrete areas of the screen - addressable areas of the screen that can be set to a particular color. This is how we see things on the screen, as individual pixels of data used together to represent some kind of image.

Just like the point in mathematics, a line is infinitely thin, but has length. A line is composed of an infinite number of points between the beginning and ending locations of the line.

Relating these two distinctly different concepts to each other though doesn't always lend itself to a simple situation to understand. On the surface, a pixel's coordinate location appears to be the same thing as it is in mathematics. But, when you get into deeper issues of graphics theory this isn't truly the case because of the difference in sizes of a point compared to a pixel. In math, points don't have to be on even integer boundaries - they can be fractional. A point can be at (2.53,1.295), whereas in graphics, a pixel cannot be at a fractional location - there's no such thing as a part of a pixel!

A graphics screen is designed so that every pixel location on the screen has a unique location specified (in human terms) as an X/Y coordinate pair. This is called the Cartesian Coordinate System. It is by far one of the easiest ways of representing a coordinate in a two-dimensional world like a monitor. If you zoom in closely on a monitor and look at the layout of pixels and their relationships to coordinates, you might see something like this:

```text
                        (X DIMENSION)

                           1│1│1│1│1│1│1│1│1│1│2│2│2│2│
      │0│1│2│3│4│5│6│7│8│9│0│1│2│3│4│5│6│7│8│9│0│1│2│3│
    ──╔═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╗
     0║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     1║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
Y    2║ │ │ │ │ │ │ │ │ │ │ │█│█│ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
D    3║ │ │ │ │ │ │ │ │ │ │ │█│█│ │ │ │ │ │ │ │ │ │ │ ║
I   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
M    4║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
E   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
N    5║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
S   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
I    6║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
O   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
N    7║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     8║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

If you look at the previous diagram, you can see that there is a grid of pixels that is 24 pixels wide (the X direction) and 10 pixels high (the Y direction). Each of the squares is a black pixel. The pixels contain a "#" are considered white pixels. There are four pixels that are ON in this diagram, at locations (11,2), (12,2), (11,3) and (12,3). This is how graphics hardware addresses graphics pixels, by specifying an X/Y coordinate location for a pixel to turn it on or off (or more generally, to set it to a particular color).

If you look closely at the locations of the coordinates in the previous diagram, the X/Y coordinates address the physical pixel cells themselves. Each pixel cell is separated by infinitely thin lines - the pixel cells' borders so to speak. Now, each pixel is physically adjacent to the ones next to it and there are no gaps between them. This is the way graphics hardware works.

Now that we've described the way graphics hardware addresses pixel locations, let's look at why it's not really the best way of describing graphics mathematically. For the hardware, this is the best way of handling things, but mathematically, it's not.

The world of graphics hardware has many different facets. One graphics display device can often times display graphics at different resolutions. A typical video card on the IBM-PC can display graphics at 320x200, 640x350, 640x400, 640x480, 800x600, 1024x768 and even as high as 1280x1024 and higher. That's quite a bit of difference in pixel grids (like the one shown earlier). Not only can the number of pixels change horizontally and vertically, but when the resolutions get higher, the pixels get smaller and harder to see. When graphics hardware can achieve a resolution of infinity by infinity, then we will have achieved perfect sight (like what we see around us). But obviously, this will probably never happen in our lifetimes (or our great granchildren's for that matter).

What would happen if you had a line drawn on a graphics screen from coordinates (0,0) to (639,349) at 640x350 resolution? You would have a nice little line on the screen that stretches from the upper-left corner to the lower-right corner. Now, if you drew the same line at 800x600 resolution? Your line would no longer go all the way to the bottom of the screen or to the far right of the screen. It would stop about 2/3'rds of the way down and over.

The problems start to come up with mathematics and graphical representations when we try to make something look the same at one resolution as it does in another (resolution independence). Sure you can translate a coordinate in one resolution to some other coordinate in a different resolution. All you need to know are the dimensions of each resolution and a bit of algebra. But pixels aren't the same thickness! The line described previously could still be drawn properly to the lower-right of the screen, but it would appear a lot thinner. You could try drawing two lines offset by one pixel location and you would come "close" to the original thickness of the line at 640x350 resolution, but it wouldn't be a perfect match. A perfect match is a rare thing when dealing with different resolutions.

Now, on to the real issue at hand here: translation of coordinates. We won't worry about the size of pixels, but will concentrate on getting the locations of points correct at different resolutions. Let's say you have a screen at 640x350 resolution with two filled rectangles drawn on it. The first rectangle is drawn from (2,1) to (4,3) and the second one is drawn from (5,1) to (7,3) like this:

```text
      │0│1│2│3│4│5│6│7│8│9│
    ──╔═╤═╤═╤═╤═╤═╤═╤═╤═╤═╗
     0║ │ │ │ │ │ │ │ │ │ ║     1st: (2,1) - (4,3)
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢     2nd: (5,1) - (7,3)
     1║ │ │█│█│█│░│░│░│ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     2║ │ │█│█│█│░│░│░│ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     3║ │ │█│█│█│░│░│░│ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     4║ │ │ │ │ │ │ │ │ │ ║
    ──╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

Now, you notice that both rectangles are right next to each other. There are no gaps between them. Now, if you tried to draw these same two rectangles on a graphics screen that was 1280x700 pixels in size, and tried to make it appear in the exact same location and size on the monitor, you would have to translate the corners of the rectangles to the new resolution and re-plot the rectangles. Now, 640x2 is 1280 and 350x2 is 700 so our new resolution is exactly twice as large in both the X and Y directions (this is RARELY the case!). So, in order to translate our original coordinates to this resolution we simply multiply the numbers by 2. Pretty simple. Our previous rectangles in their old untranslated state and the newly translated ones would be:

|             | Untranslated  | Translated      |
| ----------- | ------------- | --------------- |
| Rectangle 1 | (2,1) - (4,3) | (4,2) - (8,6)   |
| Rectangle 2 | (5,1) - (7,3) | (10,2) - (14,6) |

Now, let's plot these two rectangles on our new graphics screen at the newly translated coordinates:

```text
                 (X DIMENSION)

                          │1│1│1│1│1│1│1│
      │0│1│2│3│4│5│6│7│8│9│0│1│2│3│4│5│6│
    ──╔═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╤═╗
     0║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     1║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
Y    2║ │ │ │ │█│█│█│█│█│ │░│░│░│░│░│ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
D    3║ │ │ │ │█│█│█│█│█│ │░│░│░│░│░│ │ ║
I   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
M    4║ │ │ │ │█│█│█│█│█│ │░│░│░│░│░│ │ ║
E   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
N    5║ │ │ │ │█│█│█│█│█│ │░│░│░│░│░│ │ ║
S   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
I    6║ │ │ │ │█│█│█│█│█│ │░│░│░│░│░│ │ ║
O   ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
N    7║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╟─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
     8║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
    ──╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

What happened? We now have a black line in between the two rectangles. That's definitely not what we wanted to happen. Why did this happen? It's partly because of the nature of graphics hardware in the way they address pixels, and partly the way we humans think of pixels mathematically from a programming standpoint. What we need is a better mathematical representation of pixels and graphics coordinates so that when we translate coordinates these things don't happen.

As we mentioned earlier, the lines on the above diagram represent the borders around each pixel. Each of these lines, like their mathematical counterparts, are infinitely thin. The only thing in the above diagram that has any size (or area) physically are the pixels themselves. Since the boundary lines around the pixels are defining the area that the pixel will occupy, it makes sense that we should think of those lines as the actual coordinates. If we think of the areas in between the pixels as the actual coordinates, we can think of pixels as the areas in between coordinates that are filled in with color. So, if we said to draw a filled in rectangle like we did earlier, we would actually be saying "fill in this rectangle's interior". Just like coloring books as a child, you have to stay inside the lines (or at least we're supposed to). Think about pixels as spots between the lines that get filled in with color just like a coloring book - the only difference is, a pixel cannot go outside the lines (don't you wish you were a pixel when you were younger?).

Using this new way of thinking of graphics is not very difficult, it just seems a bit odd -especially if you've been working with graphics for awhile. To draw the previous two rectangles properly the coordinates for them would have to be changed somewhat - like this:

**(old method)**

|             | Untranslated  | Translated      |
| ----------- | ------------- | --------------- |
| Rectangle 1 | (2,1) - (4,3) | (4,2) - (8,6)   |
| Rectangle 2 | (5,1) - (7,3) | (10,2) - (14,6) |

**(new method)**

|             | UNTRANSLATED  | TRANSLATED      |
| ----------- | ------------- | --------------- |
| RECTANGLE 1 | (2,1) - (5,4) | (4,2) - (10,8)  |
| RECTANGLE 2 | (5,1) - (8,4) | (10,2) - (16,8) |

Notice that the untranslated rectangles' coordinates are almost the same. In fact, the upper-left coordinates haven't changed at all. The only coordinates that have changed are the lower-right coordinates, and only by one pixel location. Now, if we draw these two rectangles using our new mathematical model for graphics, we would get the following (in both resolution examples:

```text
                                               1 1 1 1 1 1 1 1
                           0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7
                          0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗
                    1      ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
0 1 2 3 4 5 6 7 8 9 0     1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗      ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
 ║ │ │ │ │ │ │ │ │ │ ║     2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
 ║ │ │█│█│█│░│░│░│ │ ║     3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
 ║ │ │█│█│█│░│░│░│ │ ║     4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
 ║ │ │█│█│█│░│░│░│ │ ║     5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
 ║ │ │ │ │ │ │ │ │ │ ║     6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
5╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
                          7╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
                           ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
                          8╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
                           ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
                          9╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

If you look closely at the two graphs above you may notice a subtle difference in the numbering of the coordinates. The numbers are all there, but instead of labeling the cells themselves with coordinates, we have labeled the lines in between as the coordinates. When we say to draw a rectangle from (2,1) to (5,4) we are saying to draw a filled in area "between" coordinate lines 2 and 5 in the X direction and 1 and 4 in the Y direction. If you look closely at the upper left diagram, you will notice that is exactly what we have done. Now look closely at the upper right diagram. There are no gaps between the rectangles now. Also if you look at the translated coordinates, the right edge of the first rectangle is at X coordinate 10, and the left edge of the second rectangle is also at X coordinate 10. But they don't overlap each other. That's the part about this new way of thinking about things that gives people the hardest time.

So far so good. Let's look at another example - one which draws the same two rectangles but this time, let's not fill them in. The diagram below shows the two at both example resolutions:

```text
                                               1 1 1 1 1 1 1 1
                           0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7
                          0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗
                    1      ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
0 1 2 3 4 5 6 7 8 9 0     1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗      ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
 ║ │ │ │ │ │ │ │ │ │ ║     2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
 ║ │ │█│█│█│░│░│░│ │ ║     3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│ │ │ │ │ │░│ │ │ │░│ │ ║
 ║ │ │█│ │ │░│ │░│ │ ║     2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│ │ │ │ │ │░│ │ │ │░│ │ ║
 ║ │ │█│█│█│░│░│░│ │ ║     5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢      ║ │ │ │ │█│ │ │ │ │ │░│ │ │ │░│ │ ║
 ║ │ │ │ │ │ │ │ │ │ ║     6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
5╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝      ║ │ │ │ │█│ │ │ │ │ │░│ │ │ │░│ │ ║
                          7╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
                           ║ │ │ │ │█│█│█│█│█│█│░│░│░│░│░│ │ ║
                          8╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
                           ║ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ │ ║
                          9╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

Not what you thought would happen, was it? This example illustrates a key point in our mathematical model of graphics: that there is a difference between filled objects and outlined objects. Filled objects fill everything inside an enclosed area whereas an outline (one or more lines) uses pixels to approximate an infinitely thin line. When lines and points are plotted on the video device, they are "rounded up" to the next highest pixel location. So, a point at (4,2) would not be on the intersecting lines at (4,2), it would be a pixel activated between 4 and 5 on the X axis and 2 and 3 on the Y axis. Look at the upper right diagram to convince yourself this is the case. Filled-in areas on the other hand, do not round up to the next highest pixel locations. They always fill in an area in-between the boundary lines. This means that in a filled-in rectangle, the right and bottom edges are "off by one" so to speak.

To better illustrate these two different situations, we will draw a filled-in rectangle and a non-filled rectangle both using the same dimensions at the same resolution, then we will superimpose them on top of each other to better show the differences;

```text
  0 1 2 3 4 5 6 7 8 9    0 1 2 3 4 5 6 7 8 9    0 1 2 3 4 5 6 7 8 9
 0╔═╪═╪═╪═╪═╪═╪═╪═╪═╗   0╔═╪═╪═╪═╪═╪═╪═╪═╪═╗   0╔═╪═╪═╪═╪═╪═╪═╪═╪═╗
  ║ │ │ │ │ │ │ │ │ ║    ║ │ │ │ │ │ │ │ │ ║    ║ │ │ │ │ │ │ │ │ ║
 1╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   1╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   1╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │░│░│░│░│░│░│ │ ║    ║ │█│█│█│█│█│█│█│ ║    ║ │▒│▒│▒│▒│▒│▒│█│ ║
 2╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   2╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   2╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │░│░│░│░│░│░│ │ ║    ║ │█│ │ │ │ │ │█│ ║    ║ │▒│░│░│░│░│░│█│ ║
 3╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   3╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   3╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │░│░│░│░│░│░│ │ ║    ║ │█│ │ │ │ │ │█│ ║    ║ │▒│░│░│░│░│░│█│ ║
 4╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   4╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   4╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │░│░│░│░│░│░│ │ ║    ║ │█│ │ │ │ │ │█│ ║    ║ │▒│░│░│░│░│░│█│ ║
 5╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   5╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   5╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │ │ │ │ │ │ │ │ ║    ║ │█│█│█│█│█│█│█│ ║    ║ │█│█│█│█│█│█│█│ ║
 6╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   6╫─┼─┼─┼─┼─┼─┼─┼─┼─╢   6╫─┼─┼─┼─┼─┼─┼─┼─┼─╢
  ║ │ │ │ │ │ │ │ │ ║    ║ │ │ │ │ │ │ │ │ ║    ║ │ │ │ │ │ │ │ │ ║
 7╚═╧═╧═╧═╧═╧═╧═╧═╧═╝   7╚═╧═╧═╧═╧═╧═╧═╧═╧═╝   7╚═╧═╧═╧═╧═╧═╧═╧═╧═╝
    Filled rectangle      Unfilled rectangle      Both rectangles
     (1,1) - (7,5)          (1,1) - (7,5)          (1,1) - (7,5)
```

Notice that the two rectangles are not the exact same size. Both the left and top edges are at the exact same locations, but in the case of the unfilled rectangle, the right and bottom edges are one pixel over and down. This shows that lines and points are rounded up to the next highest pixel location (the first pixel after the coordinate), but filled areas fill between the boundary lines. This seemingly odd way of doing things becomes extremely important when you deal with one image at different resolutions - as you saw with the case of translating two filled-in rectangles earlier from one resolution to another.

In a very real sense, you could easily think about coordinates and graphics in two different ways. The way to think about them depends on the type of graphics operation being performed. If you are dealing with a fill operation of some kind, then you think about the drawing surface with coordinate lines "in between" the physical pixel cells. If you are dealing with a line drawing situation (or drawing points, circles, etc), then you can think of coordinates directly addressing the pixel cells themselves (just like when we began this conversation at the beginning of this section). When dealing with line drawing operations, there is no difference in mathematical models - there's only a difference when you get into filling areas in. Whichever method of thinking of things works best for you, use.

Other filled objects work the same way as do filled rectangles. For example, consider an unfilled polygon with the following vertices: _(v2.A4)_

|          | X Pos | Y Pos |
| -------- | ----- | ----- |
| Vertex 0 | 0     | 0     |
| Vertex 1 | 8     | 0     |
| Vertex 2 | 14    | 3     |
| Vertex 3 | 14    | 4     |
| Vertex 4 | 12    | 6     |
| Vertex 5 | 4     | 6     |
| Vertex 6 | 0     | 2     |
| Vertex 7 | 0     | 0     |

With this polygon we would have a polygon that looks like the left diagram below. The right diagram is what it would look like if it were filled and had a border drawn at the same time (the different shaded blocks indicates which is border, fill-color, or both): _(v2.A4)_

```text
                     1 1 1 1 1 1                       1 1 1 1 1 1
 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5   0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5
0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗  0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗
 ║█│█│█│█│█│█│█│█│█│ │ │ │ │ │ ║   ║▒│▒│▒│▒│▒│▒│▒│▒│█│ │ │ │ │ │ ║
1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║█│ │ │ │ │ │ │ │ │█│█│ │ │ │ ║   ║▒│░│░│░│░│░│░│░│░│█│█│ │ │ │ ║
2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║█│ │ │ │ │ │ │ │ │ │ │█│█│ │ ║   ║▒│░│░│░│░│░│░│░│░│░│░│█│█│ │ ║
3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │█│ │ │ │ │ │ │ │ │ │ │ │█│█║   ║ │▒│░│░│░│░│░│░│░│░│░│░│░│█│█║
4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │█│ │ │ │ │ │ │ │ │ │ │ │█║   ║ │ │▒│░│░│░│░│░│░│░│░│░│░│░│█║
5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │ │█│ │ │ │ │ │ │ │ │ │█│ ║   ║ │ │ │▒│░│░│░│░│░│░│░│░│░│█│ ║
6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │ │ │█│█│█│█│█│█│█│█│█│ │ ║   ║ │ │ │ │█│█│█│█│█│█│█│█│█│ │ ║
7╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝  7╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
        Unfilled polygon             Filled and unfilled polygon
```

Taking a second example. Let's consider an unfilled oval centered at (7,3) with a horizontal radius of 8 and a vertical radius of 4. The unfilled oval is depicted in the left diagram below. The diagram on the right is the same oval with the border drawn and also filled in. Notice how the border is drawn in relation to the filled-in interior and how it adheres to resolution independence. _(v2.A4)_

```text
                     1 1 1 1 1 1                       1 1 1 1 1 1
 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5   0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5
0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗  0╔═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╪═╗
 ║ │ │ │ │█│█│█│█│█│█│█│ │ │ │ ║   ║ │ │ │ │▒│▒│▒│▒│▒│▒│█│ │ │ │ ║
1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  1╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │█│█│ │ │ │ │ │ │ │█│█│ │ ║   ║ │ │▒│▒│░│░│░│░│░│░│░│█│█│ │ ║
2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  2╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │█│ │ │ │ │ │ │ │ │ │ │ │█│ ║   ║ │▒│░│░│░│░│░│░│░│░│░│░│░│█│ ║
3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  3╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║█│ │ │ │ │ │ │■│ │ │ │ │ │ │█║   ║▒│░│░│░│░│░│░│■│░│░│░│░│░│░│█║
4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  4╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║█│ │ │ │ │ │ │ │ │ │ │ │ │ │█║   ║▒│░│░│░│░│░│░│░│░│░│░│░│░│░│█║
5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  5╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │█│ │ │ │ │ │ │ │ │ │ │ │█│ ║   ║ │▒│░│░│░│░│░│░│░│░│░│░│░│█│ ║
6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  6╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │█│█│ │ │ │ │ │ │ │█│█│ │ ║   ║ │ │▒│▒│░│░│░│░│░│░│░│█│█│ │ ║
7╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢  7╫─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─┼─╢
 ║ │ │ │ │█│█│█│█│█│█│█│ │ │ │ ║   ║ │ │ │ │█│█│█│█│█│█│█│ │ │ │ ║
8╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝  8╚═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╧═╝
```

If you look closely at the right diagram, you will notice that the oval isn't "balanced". This is because in this situation, the oval is centered about a particular point, but the filled oval is partially offset on an odd-boundary - the filled interior is 8 pixels to the left of the center point (inclusive), and 7 pixels to the right of the center point (inclusive). This is due to the resolution independent nature of filled regions. If you need to draw a perfectly smooth filled oval, draw one with a solid fill and with borders enabled, both with the same drawing and fill color. _(v2.A4)_

**Practical summary:** for fills, think "coordinates between pixels"; for lines, points, and curves, think "coordinates address pixels" - the models only diverge for filled interiors. Filled polygons and curved regions follow the same fill-between-lines rule, with their borders (optional since 2.0, see [2.3 Shapes & Fills](2.3-shapes-and-fills.md)) rounding up like lines. _Evidence: 2.00a4 (the treatment carries into 3.x unchanged)._

## RIP_SET_BASE_MATH

_Added in RIPscrip v2.A0._

_Evidence: 2.00a4 (as the colliding draft letter `b`); HLP (`RIP_SetBaseMath`, plus `$BASEMATH$` variable); corpus (94 uses in 90 files; ONLINE.RIP inline comment "Set base math to MegaNums (base 36)") - not in SyncTERM._

_Sets the base math for most RIPscrip parameters_

|               |               |
| ------------- | ------------- |
| **Level**     | 0             |
| **Command**   | `J`           |
| **Arguments** | `base_math:2` |

**Format:** `!|J <base_math>` **Example:** `!|J10`

**Attributes used:** Base Math (MegaNums only)

This command sets the Base Math used extensively throughout the RIPscrip language. By default, the RIPscrip language uses Base-36 math for all of its numeric parameters. This number can be changed to accomodate larger values for numeric parameters. For example, a two digit base-36 number can hold a number from 0-1295. A two digit Base-64 number can hold a number from 0-4095 which is considerably larger.

This can be used when you set the World Coordinate Frame to larger coordinates, even larger than 1024x1024. Altering the Base Math of the parameters gives you the ability to handle larger numbers without expanding the size (byte-wise) of parameters throughout the language (see [RIP_SET_COORDINATE_SIZE](#rip_set_coordinate_size)).

**NOTE:** This command ALWAYS uses base-36 (MegaNum) math for its parameter. The reason for this is that this is a universal command, and the Base Math may not be known at the moment the command is received.

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command is received, the base math is reset to Base-36 (MegaNum) values. If a scene is received after the Reset Windows command and it uses Base Math other than Base-36, then you MUST send a RIP_SET_BASE_MATH command immediately after the RIP_RESET_WINDOWS command.

The valid settings at this time are:

- Base-36 (`10` meganum)
- Base-64 (`1S` meganum)

If an illegal Set Base Math command is received (an illegal base math setting), RIPscrip will default to MegaNums.

**`J` is the confirmed wire opcode.** The RIPtel corpus settles it: 90 of 116 files open with the prologue `!|J10|n2000|M08|fZKQO`, and ONLINE.RIP annotates `J10` inline as "Set base math to MegaNums (base 36)". The shipping 3.0 driver's command inventory confirms the name (`RIP_SetBaseMath`). _Evidence: corpus; HLP._

> **Editor's note - the draft `b` collision:** the 2.00 ALPHA 4 draft assigned level-0 `b` to **both** this command and [RIP_EXTENDED_TEXT_WINDOW](1.4-terminal-ansi-view.md#rip_extended_text_window) - an unshippable collision, never resolved in any published document. The shipping 3.0 driver resolved it by moving RIP_SET_BASE_MATH to level-0 **`J`** (so the draft's format `!|b <base_math>` became `!|J <base_math>`), leaving `b` to the extended text window - exactly as SyncTERM's descriptor table also has it. This reference documents `J` as the 3.x opcode throughout; the draft position is preserved in the [2.0 entry](../../2.0/ripscrip/1.2-math-and-coordinates.md#rip_set_base_math).

## RIP_SET_COORDINATE_SIZE

_Added in RIPscrip v2.A1._

_Evidence: 2.00a4; HLP (`RIP_SetCoordinateSize`, plus `$COORDSIZE$` variable; "Invalid coordinate size", and "Invalid coordinate size in environment header segment" for the scene-header form); corpus (94 uses in 90 files) - not in SyncTERM._

_Sets the number of bytes used for XY coordinates_

|               |                     |
| ------------- | ------------------- |
| **Level**     | 0                   |
| **Command**   | `n`                 |
| **Arguments** | `byte_size:1 res:3` |

**Format:** `!|n <byte_size> <res>` **Example:** `!|n2000`

**Attributes used:** Base Math (current setting)

This command alters the number of bytes that will be expected for all subsequent X or Y parameters in RIPscrip. By default, all X or Y parameters are two bytes in length as denoted syntax-wise as x:XY or y:XY in the specification. This command allows you to alter this size. In 1.x versions of RIPscrip, the maximum size of a parameter was in the X direction and the maximum value was 639. This could safely be represented in two meganum digits. In 2.0 of RIPscrip and beyond, we introduce a world coordinate system into the specification which allows you to use a much higher resolution for your drawing environment. This facilitates resolution independence. To provide for future expandability when ultra-high resolution devices might exist, the possibility of an X or Y coordinate exceeding 4095 might occur. Since this is the largest value that can be accomodated in a 2-byte UltraNum, we offer an option that provides for extensibility.

Using this parameter to expand the byte size beyond 2 will make a RIPscrip file bigger. This is because every X/Y coordinate will be expanded in size by a certain number of bytes, and since these are the fundamental values in any graphical environment, it will result in larger RIPscrip files. In practice, this command should be used with caution. When situations permit, do not use this command, or use it with a byte size of 2 (the default). This will keep files from ever getting larger than they would be by default.

Valid settings are from 2-5. If any other values are specified, then a value of 2 will be assumed. _(v2.A3)_

A [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command will reset the coordinate size back to two byte wide parameters.

**NOTE:** The `<res>` parameter is reserved and should be set to "000" for future expansion by TeleGrafix.

The standard corpus prologue sends `!|n2000` - byte size 2, reserved `000` - annotated in TELPORT.FN as "Set X/Y coordinate size to 2 bytes". No corpus scene ever uses a size other than 2; a 2-digit MegaNum (0-1295) comfortably addresses the 1280×960 world frame. Commands whose coordinate fields obey this setting are marked `:XY` in the command entries. _Evidence: corpus._

## Limits Snapshot

_Evidence: WP; HLP._

| Quantity | Limit | Source |
| --- | --- | --- |
| Maximum coordinate value / world frame axis | 32,767 | WP |
| Default coordinate field width | 2 digits (`n2000` prologue) | corpus |
| Coordinate size range | 2-5 digits | 2.00a4; HLP validates |
| Polygon-class vertex count | 4,096 | HLP ("polygon-type objects to have 4096 vertices") |
| Base math values | 36 (MegaNum), 64 (UltraNum) | 2.00a4; WP |

---

[◀ Prev: 1.1 Protocol & Command Hierarchy](1.1-protocol-and-command-hierarchy.md) · [Contents](README.md) · [Next: 1.3 World View & Virtual Canvas ▶](1.3-world-view-virtual-canvas.md)
